--- a/.dev/sass/variables/_variables.scss
+++ b/.dev/sass/variables/_variables.scss
@@ -60,7 +60,7 @@ $code-color: $black;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: #8bd1e5;
+$anchor-color: #128CED;
 $anchor-color-hover: scale-color($anchor-color, $lightness: 50%);
 $anchor-color-visited: scale-color($anchor-color, $lightness: 50%);
 $anchor-text-decoration: none;
