--- a/editor-style.css
+++ b/editor-style.css
@@ -2145,6 +2145,30 @@ img[class*="wp-image-"] {
 html {
   -webkit-font-smoothing: antialiased; }
 
+.sticky .entry-title {
+  position: relative; }
+  .sticky .entry-title a:before {
+    background-color: rgba(0, 0, 0, 0.8);
+    font-family: 'Genericons';
+    content: '\f308';
+    position: absolute;
+    top: 10px;
+    left: -70px;
+    opacity: 0.2;
+    height: 42px;
+    width: 48px;
+    padding: 3px 3px 3px 8px;
+    font-size: 28px;
+    color: white; }
+    @media only screen and (max-width: 55em) {
+      .sticky .entry-title a:before {
+        top: 8px;
+        left: -45px;
+        height: 28px;
+        width: 34px;
+        font-size: 22px;
+        padding: 0 0 0 8px; } }
+
 .no-results,
 .not-found {
   padding: 1.5em;
@@ -2286,6 +2310,14 @@ article.format-link {
 
 .comment-content a {
   word-wrap: break-word; }
+
+.bypostauthor {
+  display: block;
+  padding: 40px 40px 0 50px;
+  margin-bottom: 60px;
+  border: 3px solid rgba(0, 0, 0, 0.2); }
+  .bypostauthor .comment-body {
+    padding-left: 50px; }
 
 .comments-area {
   padding: 1.5em;
