--- a/.dev/sass/partials/_comments.scss
+++ b/.dev/sass/partials/_comments.scss
@@ -3,7 +3,14 @@
 }
 
 .bypostauthor {
+	display: block;
+	padding: 40px 40px 0 50px;
+	margin-bottom: 60px;
+	border: 3px solid rgba(0,0,0,.2);
 
+	.comment-body{
+		padding-left: 50px;
+	}
 }
 
 .comments-area {
