Change Theme URI

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /**
  * Theme Name: Escapade
- * Theme URI: https://wordpress.org/themes/escapade
+ * Theme URI: https://github.com/godaddy/wp-escapade-theme
  * Author: GoDaddy
  * Author URI: https://www.godaddy.com/
  * Description: Escapade is a Primer child theme with a unique sidebar navigation.
