--- a/.dev/sass/style.scss
+++ b/.dev/sass/style.scss
@@ -33,6 +33,7 @@
 @import "partials/content";
 @import "partials/infinite-scroll";
 @import "partials/media";
+@import "partials/pointers";
 @import "partials/layout";
 @import "partials/header";
 @import "partials/footer";
