Update wp content editor height slowly expanding.

--- a/.dev/sass/mixins/_global.scss
+++ b/.dev/sass/mixins/_global.scss
@@ -296,7 +296,7 @@ meta.foundation-data-attribute-namespace {
 }
 
 html,
-body { font-size: $base-font-size; height: 100%; }
+body { font-size: $base-font-size; }
 
 // Default body styles
 body {
