--- a/editor-style-rtl.css
+++ b/editor-style-rtl.css
@@ -30,8 +30,7 @@ meta.foundation-data-attribute-namespace {
 
 html,
 body {
-  font-size: 100%;
-  height: 100%; }
+  font-size: 100%; }
 
 body {
   background: #fff;
@@ -1276,8 +1275,7 @@ meta.foundation-data-attribute-namespace {
 
 html,
 body {
-  font-size: 100%;
-  height: 100%; }
+  font-size: 100%; }
 
 body {
   background: #fff;
@@ -1391,8 +1389,7 @@ meta.foundation-data-attribute-namespace {
 
 html,
 body {
-  font-size: 100%;
-  height: 100%; }
+  font-size: 100%; }
 
 body {
   background: #fff;
