--- a/style-rtl.css
+++ b/style-rtl.css
@@ -49,8 +49,7 @@ meta.foundation-data-attribute-namespace {
 
 html,
 body {
-  font-size: 100%;
-  height: 100%; }
+  font-size: 100%; }
 
 body {
   background: #fff;
@@ -164,8 +163,7 @@ meta.foundation-data-attribute-namespace {
 
 html,
 body {
-  font-size: 100%;
-  height: 100%; }
+  font-size: 100%; }
 
 body {
   background: #fff;
@@ -2120,8 +2118,7 @@ meta.foundation-data-attribute-namespace {
 
 html,
 body {
-  font-size: 100%;
-  height: 100%; }
+  font-size: 100%; }
 
 body {
   background: #fff;
