Adjust site header so long titles don't cause an overlap over the .hero element.

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -138,5 +138,8 @@ $entry-title-bg: rgba(0, 0, 0, 0.6) !default;
 	.site-header {
 		padding: 120px 0 60px;
 		position: relative;
+		@media #{$small-only} {
+			padding-top: 0;
+		}
 	}
 }
