--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -291,13 +291,14 @@ body {
 
 .side-masthead {
 	@include clearfix;
-	position: absolute;
+	position: relative;
 	width: 100%;
 	top: 0;
 	text-align: center;
 	z-index: 9999;
 	background-color: $menu-bg-ie;
 	background-color: $menu-background-color;
+	margin-bottom: 60px;
 
 	@media #{$medium-up}{
 		position: fixed;
