--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2995,20 +2995,41 @@ a {
 
 /* Small menu */
 .menu-toggle {
-  width: 70px;
-  padding: 15px 10px 10px 15px;
+  width: 3.6rem;
+  padding: 0.3rem;
   cursor: pointer;
-  float: left;
-  display: block; }
+  display: none;
+  position: absolute;
+  top: 4px;
+  left: 0;
+  display: block;
+  z-index: 99999; }
   @media only screen and (min-width: 55.063em) {
     .menu-toggle {
       display: none; } }
   .menu-toggle div {
     background: #fff;
-    height: 4px;
-    margin: 6px;
-    -webkit-border-radius: 1px;
-    border-radius: 1px; }
+    margin: 0.43rem 0 0.43rem .86rem;
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .15s ease-in-out;
+    transition: .15s ease-in-out;
+    -webkit-transform-origin: right center;
+    -ms-transform-origin: right center;
+    transform-origin: right center;
+    height: 0.32rem; }
+  .menu-toggle.open div:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg); }
+  .menu-toggle.open div:nth-child(2) {
+    width: 0%;
+    opacity: 0; }
+  .menu-toggle.open div:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
 
 .side-masthead {
   position: relative;
@@ -3035,6 +3056,9 @@ a {
     clear: both; }
   .side-masthead .site-logo {
     display: none; }
+  @media only screen and (max-width: 55em) {
+    .side-masthead .site-title-wrapper {
+      width: 80%; } }
   .side-masthead .site-title {
     line-height: 53px;
     font-size: 30px;
