--- a/.dev/sass/partials/_widgets.scss
+++ b/.dev/sass/partials/_widgets.scss
@@ -243,7 +243,11 @@ $widget-bg: #fff !default;
 	}
 }
 
-.hero .widget.widget_text p {
-	font-size: 1.4rem;
-	line-height: 1.4;
+.hero {
+	padding-top: 2em;
+
+	.widget.widget_text p {
+		font-size: 1.4rem;
+		line-height: 1.4;
+	}
 }
