--- a/style.css
+++ b/style.css
@@ -4267,3 +4267,110 @@ header .social-menu {
 
 #wpstats {
   display: none; }
+
+.main-navigation .menu-item-object-cart:hover a {
+  background: transparent; }
+
+ul.site-header-cart.menu {
+  width: 100%;
+  max-width: 275px;
+  padding: 0;
+  list-style: none;
+  float: right;
+  display: none;
+  position: relative;
+  z-index: 10001; }
+
+.site-footer-inner .woocommerce-cart-menu-item,
+.site-info-wrapper .woocommerce-cart-menu-item {
+  display: none; }
+
+.widget_shopping_cart {
+  float: left;
+  padding: 0 1rem;
+  margin-bottom: .5em; }
+  .widget_shopping_cart .quantity {
+    font-style: italic;
+    color: #fff; }
+  .widget_shopping_cart .total {
+    color: #fff; }
+  .widget_shopping_cart ul.product_list_widget {
+    position: relative !important;
+    left: 0; }
+  .widget_shopping_cart p.buttons,
+  .widget_shopping_cart .total,
+  .widget_shopping_cart .product_list_widget {
+    float: left;
+    width: 100%; }
+  .widget_shopping_cart .total strong {
+    text-index: 0; }
+  .widget_shopping_cart p.buttons {
+    padding: .5em;
+    margin-bottom: 0; }
+
+.woocommerce-cart-menu-item .sub-menu {
+  background: transparent; }
+
+.woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  padding-bottom: 5px;
+  border-bottom: none;
+  padding: .5em 1em;
+  text-indent: 0; }
+  .woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item a {
+    border-bottom: none; }
+  .woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item a:nth-child(2) {
+    padding: .5em 0em;
+    margin: 0;
+    width: 100%;
+    text-indent: 1.75rem; }
+
+.woocommerce-cart-menu-item .product_list_widget {
+  border: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  display: inline-block;
+  left: 0 !important;
+  background: inherit; }
+
+.woocommerce-cart-menu-item .widget_shopping_cart {
+  padding: 0; }
+  .woocommerce-cart-menu-item .widget_shopping_cart .total {
+    margin: 0 0 10px 0;
+    padding-top: 10px;
+    text-align: center; }
+  .woocommerce-cart-menu-item .widget_shopping_cart .total strong {
+    text-indent: 0; }
+  .woocommerce-cart-menu-item .widget_shopping_cart p.buttons a {
+    text-align: center;
+    width: 100%;
+    text-indent: 0; }
+    .woocommerce-cart-menu-item .widget_shopping_cart p.buttons a:first-child {
+      margin-bottom: 5px; }
+
+.woocommerce-cart-menu-item .cart-preview-count {
+  margin-left: 8px; }
+
+.woocommerce-cart-menu-item .cart_list li a.remove {
+  position: relative;
+  float: left;
+  padding: 0;
+  margin-top: 18px;
+  text-indent: 0;
+  margin-right: 5px;
+  z-index: 1001;
+  line-height: .8;
+  text-indent: 0 !important; }
+  .woocommerce-cart-menu-item .cart_list li a.remove:hover {
+    background: red !important; }
+
+li#woocommerce-cart-menu-item li.mini_cart_item a {
+  border-bottom: none;
+  text-indent: 15px;
+  margin-left: 10px; }
+
+@media only screen and (min-width: 55.063em) {
+  li#woocommerce-cart-menu-item .sub-menu {
+    margin-left: -6em; } }
