--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -74,10 +74,10 @@ ul.site-header-cart.menu {
 	}
 
 	a:nth-child(2) {
-		padding: .5em 0em;
 		margin: 0;
 		width: 100%;
-		text-indent: 1.75rem;
+		padding: .5em;
+		text-indent: 1px !important;
 	}
 }
 
@@ -150,6 +150,28 @@ li#woocommerce-cart-menu-item li.mini_cart_item a {
 
 	li#woocommerce-cart-menu-item .sub-menu {
 		margin-left: -6em;
+	}
+
+}
+
+@media #{$small-only} {
+
+	li#woocommerce-cart-menu-item {
+
+		.widget_shopping_cart {
+			width: 100%;
+		}
+
+		.widget_shopping_cart .quantity,
+		.widget_shopping_cart .total {
+			color: inherit;
+		}
+
+		.woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item a:nth-child(2) img {
+			width: 100%;
+			max-width: 65px;
+		}
+
 	}
 
 }
