Add sidebar scroll. Fix page header padding.

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -139,7 +139,12 @@ $entry-title-bg: rgba(0, 0, 0, 0.6) !default;
 		padding: 120px 0 60px;
 		position: relative;
 		@media #{$small-only} {
-			padding-top: 0;
+			padding: 0;
+
+			.page-title {
+				margin-bottom: 0;
+				padding: .5em 0;
+			}
 		}
 	}
 }
