--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -143,7 +143,7 @@ $entry-title-bg: rgba(0, 0, 0, 0.6) !default;
 
 			.page-title {
 				margin-bottom: 0;
-				padding: .5em 0;
+				padding: 60px 0;
 			}
 		}
 	}
