--- a/style.css
+++ b/style.css
@@ -4019,7 +4019,7 @@ body.layout-one-column-narrow #content {
       .archive .site-header .page-title,
       .single .site-header .page-title {
         margin-bottom: 0;
-        padding: .5em 0; } }
+        padding: 60px 0; } }
 
 .site-footer {
   background-color: #414242;
