--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -262,10 +262,7 @@ body {
 	@media #{$medium-up}{
 		margin-top: 0;
 		padding-left: 250px;
-
-		&.admin-bar .side-masthead {
-			top: 32px;
-		}
+		position: relative;
 	}
 }
 
@@ -329,7 +326,10 @@ body {
 	background-color: $menu-background-color;
 
 	@media #{$medium-up}{
-		position: fixed;
+		position: absolute;
+		left: 0;
+		height: 120%;
+		padding: 0 35px;
 	}
 
 	.mobile-container {
@@ -385,31 +385,10 @@ body {
 
 	@media #{$medium-up}{
 		display: block;
-		left: 0;
 		width: 250px;
 		bottom: 0;
 		top: 0;
-		overflow: hidden;
-
-		.side-masthead-inner {
-			position: absolute;
-			left: 0;
-			overflow-x: hidden;
-			overflow-y: scroll;
-			padding: 32px 35px 0 35px;
-			height: 100%;
-			width: 100%;
-
-			&::-webkit-scrollbar {
-				display: none;
-			}
-
-		}
-
-		.masthead-element {
-			height: 100%;
-			width: 100%;
-		}
+		padding-top: 40px;
 
 		.mobile-container {
 			display: block;
