Update woocommerce compat styles

--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -245,7 +245,7 @@ $submenu-background-color: #121212;
 
 							a {
 
-								&:hover {
+								&:not(.wc-forward):hover {
 									background: none;
 								}
 							}
