--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -1,151 +1,117 @@
-.main-navigation .menu-item-object-cart:hover a {
-	background: transparent;
-}
+.primer-wc-cart-menu {
 
-ul.site-header-cart.menu {
-	width: 100%;
-	max-width: 275px;
-	padding: 0;
-	list-style: none;
-	float: right;
-	display: none;
-	position: relative;
-	z-index: 10001;
-}
-
-.site-footer-inner .woocommerce-cart-menu-item,
-.site-info-wrapper .woocommerce-cart-menu-item {
-	display: none;
-}
-
-.widget_shopping_cart {
-
-	float: left;
-	padding: 0 1rem;
-	margin-bottom: .5em;
-
-	.quantity {
-		font-style: italic;
-		color: #fff;
-	}
-
-	.total {
-		color: #fff;
-	}
-
-	ul.product_list_widget {
-		position: relative !important;
-		left: 0;
-		max-height: 250px;
-		overflow-y: auto;
-	}
-
-	p.buttons,
-	.total,
-	.product_list_widget {
-		float: left;
-		width: 100%;
-	}
-
-	.total strong {
-		text-index: 0;
-	}
-
-	p.buttons {
-		padding: .5em;
-		margin-bottom: 0;
-	}
-
-}
-
-.woocommerce-cart-menu-item .sub-menu {
-	background: transparent;
-}
-
-.woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item {
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	padding-bottom: 5px;
-	border-bottom: none;
-	padding: .5em 1em;
-	text-indent: 0;
-
-	a {
-		border-bottom: none;
-	}
-
-	a:nth-child(2) {
-		margin: 0;
-		width: 100%;
-		padding: .5em;
-		text-indent: 1px !important;
-	}
-}
-
-.woocommerce-cart-menu-item {
-
-	.product_list_widget {
-		border: none;
-		box-shadow: none;
-		display: inline-block;
-		left: 0 !important;
-		background: inherit;
+	.primer-wc-cart-sub-menu {
+		background: transparent;
 	}
 
 	.widget_shopping_cart {
 
+		float: left;
 		padding: 0;
+		background: #121212;
+
+		.cart_list li.mini_cart_item {
+			padding: 0;
+			margin: 0;
+			width: 100%;
+			padding-bottom: 5px;
+			border-bottom: none;
+			padding: .5em 1em;
+			text-indent: 0;
+
+			a {
+				border-bottom: none;
+				color: #757575;
+			}
+
+			&:hover a,
+			a:hover {
+				color: #fff;
+			}
+
+			a:nth-child(2) {
+				margin: 0;
+				width: 100%;
+				padding: .3em 0 .5em 1em;
+				text-indent: 1px;
+			}
+
+		}
+
+		.quantity {
+			font-style: italic;
+			color: #fff;
+			padding-left: 1.3em;
+		}
+
+		.total {
+			color: #fff;
+		}
+
+		ul.product_list_widget {
+			position: relative;
+			left: 0 !important;
+			max-height: 250px;
+			overflow-y: auto;
+			border: none;
+			box-shadow: none;
+			display: inline-block;
+			background: inherit;
+		}
+
+		p.buttons,
+		.total,
+		.product_list_widget {
+			float: left;
+			width: 100%;
+		}
 
 		.total {
 			margin: 0 0 10px 0;
 			padding-top: 10px;
 			text-align: center;
-		}
 
-		.total strong {
-			text-indent: 0;
-		}
-
-		p.buttons a {
-			text-align: center;
-			width: 100%;
-			text-indent: 0;
-
-			&:first-child {
-				margin-bottom: 5px;
+			strong {
+				text-index: 0;
 			}
 
 		}
 
-	}
+		p.buttons {
+			padding: .5em;
+			margin-bottom: 0;
 
-	.cart-preview-count {
-		margin-left: 8px;
+			a {
+				text-align: center;
+				width: 100%;
+				text-indent: 0;
+
+				&:first-child {
+					margin-bottom: 5px;
+				}
+
+			}
+		}
+
 	}
 
 	.cart_list li a.remove {
-		position: relative;
 		float: left;
 		padding: 0;
-		margin-top: 18px;
+		margin: 17px 5px 0 10px;
 		text-indent: 0;
-		margin-right: 5px;
 		z-index: 1001;
-		line-height: .8;
-		text-indent: 0 !important;
+		line-height: 1;
 
 		&:hover {
 			background: red !important;
 		}
 	}
 
-}
+	.cart-preview-count {
+		margin-left: 8px;
+	}
 
-li#woocommerce-cart-menu-item li.mini_cart_item a {
-	border-bottom: none;
-	text-indent: 15px;
-	margin-left: 10px;
 }
 
 body.post-type-archive,
@@ -174,30 +140,54 @@ body.single-product {
 
 }
 
-@media #{$medium-up} {
+body.woocommerce-cart {
 
-	li#woocommerce-cart-menu-item .sub-menu {
-		margin-left: -6em;
+	.primer-wc-cart-sub-menu {
+		display: none;
 	}
+}
 
+.woocommerce #content table.cart img,
+.woocommerce table.cart img,
+.woocommerce-page #content table.cart img,
+.woocommerce-page table.cart img {
+	width: 100%;
+	max-width: 100px;
+	margin-bottom: 0;
+}
+
+.woocommerce #content table.cart td.actions .input-text,
+.woocommerce table.cart td.actions .input-text,
+.woocommerce-page #content table.cart td.actions .input-text,
+.woocommerce-page table.cart td.actions .input-text {
+	padding: 7px;
+}
+
+.woocommerce ul.products li.product a.add_to_cart_button {
+	width: 100%;
+	font-size: 16px;
+	text-align: center;
 }
 
 @media #{$small-only} {
 
-	li#woocommerce-cart-menu-item {
+	.primer-wc-cart-menu-item {
 
 		.widget_shopping_cart {
 			width: 100%;
-		}
 
-		.widget_shopping_cart .quantity,
-		.widget_shopping_cart .total {
-			color: inherit;
-		}
+			.cart_list {
+				color: #fff;
 
-		.woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item a:nth-child(2) img {
-			width: 100%;
-			max-width: 65px;
+				a:nth-child(2) img {
+					width: 100%;
+					max-width: 65px;
+				}
+			}
+
+			.mini_cart_item a.remove {
+				margin-top: 20px;
+			}
 		}
 
 	}
