--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2983,7 +2983,7 @@ a {
             float: none;
             display: block;
             margin: 0; }
-            .main-navigation li.menu-item-has-children:hover > ul li a:hover {
+            .main-navigation li.menu-item-has-children:hover > ul li a:not(.wc-forward):hover {
               background: none; } }
 
 @media only screen and (min-width: 55.063em) {
@@ -4268,110 +4268,81 @@ header .social-menu {
 #wpstats {
   display: none; }
 
-.main-navigation .menu-item-object-cart:hover a {
+.primer-wc-cart-menu .primer-wc-cart-sub-menu {
   background: transparent; }
 
-ul.site-header-cart.menu {
-  width: 100%;
-  max-width: 275px;
-  padding: 0;
-  list-style: none;
-  float: left;
-  display: none;
-  position: relative;
-  z-index: 10001; }
-
-.site-footer-inner .woocommerce-cart-menu-item,
-.site-info-wrapper .woocommerce-cart-menu-item {
-  display: none; }
-
-.widget_shopping_cart {
+.primer-wc-cart-menu .widget_shopping_cart {
   float: right;
-  padding: 0 1rem;
-  margin-bottom: .5em; }
-  .widget_shopping_cart .quantity {
-    font-style: italic;
-    color: #fff; }
-  .widget_shopping_cart .total {
-    color: #fff; }
-  .widget_shopping_cart ul.product_list_widget {
-    position: relative !important;
-    right: 0;
-    max-height: 250px;
-    overflow-y: auto; }
-  .widget_shopping_cart p.buttons,
-  .widget_shopping_cart .total,
-  .widget_shopping_cart .product_list_widget {
-    float: right;
-    width: 100%; }
-  .widget_shopping_cart .total strong {
-    text-index: 0; }
-  .widget_shopping_cart p.buttons {
-    padding: .5em;
-    margin-bottom: 0; }
-
-.woocommerce-cart-menu-item .sub-menu {
-  background: transparent; }
-
-.woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item {
   padding: 0;
-  margin: 0;
-  width: 100%;
-  padding-bottom: 5px;
-  border-bottom: none;
-  padding: .5em 1em;
-  text-indent: 0; }
-  .woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item a {
-    border-bottom: none; }
-  .woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item a:nth-child(2) {
+  background: #121212; }
+  .primer-wc-cart-menu .widget_shopping_cart .cart_list li.mini_cart_item {
+    padding: 0;
     margin: 0;
     width: 100%;
-    padding: .5em;
-    text-indent: 1px !important; }
-
-.woocommerce-cart-menu-item .product_list_widget {
-  border: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  display: inline-block;
-  right: 0 !important;
-  background: inherit; }
-
-.woocommerce-cart-menu-item .widget_shopping_cart {
-  padding: 0; }
-  .woocommerce-cart-menu-item .widget_shopping_cart .total {
+    padding-bottom: 5px;
+    border-bottom: none;
+    padding: .5em 1em;
+    text-indent: 0; }
+    .primer-wc-cart-menu .widget_shopping_cart .cart_list li.mini_cart_item a {
+      border-bottom: none;
+      color: #757575; }
+    .primer-wc-cart-menu .widget_shopping_cart .cart_list li.mini_cart_item:hover a,
+    .primer-wc-cart-menu .widget_shopping_cart .cart_list li.mini_cart_item a:hover {
+      color: #fff; }
+    .primer-wc-cart-menu .widget_shopping_cart .cart_list li.mini_cart_item a:nth-child(2) {
+      margin: 0;
+      width: 100%;
+      padding: .3em 1em .5em 0;
+      text-indent: 1px; }
+  .primer-wc-cart-menu .widget_shopping_cart .quantity {
+    font-style: italic;
+    color: #fff;
+    padding-right: 1.3em; }
+  .primer-wc-cart-menu .widget_shopping_cart .total {
+    color: #fff; }
+  .primer-wc-cart-menu .widget_shopping_cart ul.product_list_widget {
+    position: relative;
+    right: 0 !important;
+    max-height: 250px;
+    overflow-y: auto;
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    display: inline-block;
+    background: inherit; }
+  .primer-wc-cart-menu .widget_shopping_cart p.buttons,
+  .primer-wc-cart-menu .widget_shopping_cart .total,
+  .primer-wc-cart-menu .widget_shopping_cart .product_list_widget {
+    float: right;
+    width: 100%; }
+  .primer-wc-cart-menu .widget_shopping_cart .total {
     margin: 0 0 10px 0;
     padding-top: 10px;
     text-align: center; }
-  .woocommerce-cart-menu-item .widget_shopping_cart .total strong {
-    text-indent: 0; }
-  .woocommerce-cart-menu-item .widget_shopping_cart p.buttons a {
-    text-align: center;
-    width: 100%;
-    text-indent: 0; }
-    .woocommerce-cart-menu-item .widget_shopping_cart p.buttons a:first-child {
-      margin-bottom: 5px; }
+    .primer-wc-cart-menu .widget_shopping_cart .total strong {
+      text-index: 0; }
+  .primer-wc-cart-menu .widget_shopping_cart p.buttons {
+    padding: .5em;
+    margin-bottom: 0; }
+    .primer-wc-cart-menu .widget_shopping_cart p.buttons a {
+      text-align: center;
+      width: 100%;
+      text-indent: 0; }
+      .primer-wc-cart-menu .widget_shopping_cart p.buttons a:first-child {
+        margin-bottom: 5px; }
 
-.woocommerce-cart-menu-item .cart-preview-count {
-  margin-right: 8px; }
-
-.woocommerce-cart-menu-item .cart_list li a.remove {
-  position: relative;
+.primer-wc-cart-menu .cart_list li a.remove {
   float: right;
   padding: 0;
-  margin-top: 18px;
+  margin: 17px 10px 0 5px;
   text-indent: 0;
-  margin-left: 5px;
   z-index: 1001;
-  line-height: .8;
-  text-indent: 0 !important; }
-  .woocommerce-cart-menu-item .cart_list li a.remove:hover {
+  line-height: 1; }
+  .primer-wc-cart-menu .cart_list li a.remove:hover {
     background: red !important; }
 
-li#woocommerce-cart-menu-item li.mini_cart_item a {
-  border-bottom: none;
-  text-indent: 15px;
-  margin-right: 10px; }
+.primer-wc-cart-menu .cart-preview-count {
+  margin-right: 8px; }
 
 body.post-type-archive,
 body.single-product {
@@ -4393,16 +4364,35 @@ body.single-product span.onsale {
   top: 0;
   right: 0; }
 
-@media only screen and (min-width: 55.063em) {
-  li#woocommerce-cart-menu-item .sub-menu {
-    margin-right: -6em; } }
+body.woocommerce-cart .primer-wc-cart-sub-menu {
+  display: none; }
+
+.woocommerce #content table.cart img,
+.woocommerce table.cart img,
+.woocommerce-page #content table.cart img,
+.woocommerce-page table.cart img {
+  width: 100%;
+  max-width: 100px;
+  margin-bottom: 0; }
+
+.woocommerce #content table.cart td.actions .input-text,
+.woocommerce table.cart td.actions .input-text,
+.woocommerce-page #content table.cart td.actions .input-text,
+.woocommerce-page table.cart td.actions .input-text {
+  padding: 7px; }
+
+.woocommerce ul.products li.product a.add_to_cart_button {
+  width: 100%;
+  font-size: 16px;
+  text-align: center; }
 
 @media only screen and (max-width: 55em) {
-  li#woocommerce-cart-menu-item .widget_shopping_cart {
+  .primer-wc-cart-menu-item .widget_shopping_cart {
     width: 100%; }
-  li#woocommerce-cart-menu-item .widget_shopping_cart .quantity,
-  li#woocommerce-cart-menu-item .widget_shopping_cart .total {
-    color: inherit; }
-  li#woocommerce-cart-menu-item .woocommerce-cart-menu-item .woocommerce.widget_shopping_cart .cart_list li.mini_cart_item a:nth-child(2) img {
-    width: 100%;
-    max-width: 65px; } }
+    .primer-wc-cart-menu-item .widget_shopping_cart .cart_list {
+      color: #fff; }
+      .primer-wc-cart-menu-item .widget_shopping_cart .cart_list a:nth-child(2) img {
+        width: 100%;
+        max-width: 65px; }
+    .primer-wc-cart-menu-item .widget_shopping_cart .mini_cart_item a.remove {
+      margin-top: 20px; } }
