Update woocommerce compatbility

--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -67,8 +67,8 @@
 		}
 
 		.total {
-			margin: 0 0 10px 0;
-			padding-top: 10px;
+			margin: 0;
+			padding: 10px 0;
 			text-align: center;
 
 			strong {
@@ -79,6 +79,7 @@
 
 		p.buttons {
 			padding: .5em;
+			padding-top: 0;
 			margin-bottom: 0;
 
 			a {
@@ -147,20 +148,23 @@ body.woocommerce-cart {
 	}
 }
 
-.woocommerce #content table.cart img,
-.woocommerce table.cart img,
-.woocommerce-page #content table.cart img,
-.woocommerce-page table.cart img {
-	width: 100%;
-	max-width: 100px;
-	margin-bottom: 0;
-}
+.woocommerce,
+.woocommerce-page {
 
-.woocommerce #content table.cart td.actions .input-text,
-.woocommerce table.cart td.actions .input-text,
-.woocommerce-page #content table.cart td.actions .input-text,
-.woocommerce-page table.cart td.actions .input-text {
-	padding: 7px;
+	table.cart {
+
+		img {
+			width: 100%;
+			max-width: 100px;
+			margin-bottom: 0;
+		}
+
+		td.actions .input-text {
+			padding: 7px !important;
+		}
+
+	}
+
 }
 
 .woocommerce ul.products li.product a.add_to_cart_button {
