Introduce styles for video headers

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -143,3 +143,48 @@ $entry-title-bg: rgba(0, 0, 0, 0.6) !default;
 		}
 	}
 }
+
+.site-header {
+
+	&.video-header {
+		height: 100vh;
+		padding: 0;
+
+		@media #{$large-down} {
+			margin: 0 auto;
+		}
+
+		.hero {
+			height: 100%;
+			display: flex;
+			align-items: center;
+		}
+
+		#wp-custom-header-video-button {
+			position: absolute;
+			top: 0.5em;
+			right: 1em;
+			opacity: 0.5;
+			z-index: 11;
+		}
+
+		iframe#wp-custom-header-video {
+			height: 100%;
+		}
+	}
+
+	#wp-custom-header {
+		position: absolute;
+		height: 100%;
+
+		img {
+			display: none;
+		}
+	}
+}
+
+body.admin-bar {
+	.video-header {
+		height: calc( 100vh - 32px );
+	}
+}
