--- a/style.css
+++ b/style.css
@@ -4037,6 +4037,43 @@ body.layout-one-column-narrow #content {
     .single .site-header {
       padding-top: 0; } }
 
+.site-header.video-header {
+  height: 100vh;
+  padding: 0; }
+  @media only screen and (max-width: 55em) {
+    .site-header.video-header {
+      margin: 0 auto; } }
+  .site-header.video-header .hero {
+    height: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .site-header.video-header #wp-custom-header-video-button {
+    position: absolute;
+    top: 0.5em;
+    right: 1em;
+    opacity: 0.5;
+    z-index: 11; }
+  .site-header.video-header iframe#wp-custom-header-video {
+    height: 100%; }
+
+.site-header #wp-custom-header {
+  position: absolute;
+  height: 100%; }
+  .site-header #wp-custom-header img {
+    display: none; }
+
+body.admin-bar .video-header {
+  height: -webkit-calc( 100vh - 32px);
+  height: calc( 100vh - 32px); }
+
 .site-footer {
   background-color: #414242;
   color: #fff;
