Introduce ninja forms compat file

--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -1,3 +1,5 @@
+@import "../compat/ninja-forms.scss";
+
 button,
 a.button{
 	font-size: 100%; /* Corrects font size not being inherited in all browsers */
